[package]
name = "natural"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1

[dependencies]
# bevy = "0.14.2"
bevy_egui = "0.30.0"
gpca = "0.1.1"
bevy = "0.14.2"

# default-features = false
# features = [
#     "android_shared_stdcxx",
#     "animation",
#     "bevy_asset",
#     # "bevy_audio",
#     "bevy_color",
#     "bevy_core_pipeline",
#     "bevy_gilrs",
#     "bevy_gizmos",
#     "bevy_gltf",
#     "bevy_pbr",
#     "bevy_render",
#     "bevy_scene",
#     "bevy_sprite",
#     "bevy_state",
#     "bevy_text",
#     "bevy_ui",
#     "bevy_winit",
#     "default_font",
#     "hdr",
#     "multi_threaded",
#     "png",
#     "smaa_luts",
#     "sysinfo_plugin",
#     "tonemapping_luts",
#     "vorbis",
#     "webgl2",
#     "x11",
#     "dynamic_linking",
# ]
