[package]
name = "natural"
version = "0.1.1"
edition = "2021"

[dependencies]
bevy = "0.14.2"
# bevy_egui = { version = "0.30.0", features = ["default_fonts", "render"] }
bevy_panorbit_camera = "0.19.5"
gpca = "0.2.1"
colorous = "1.0.14"
rayon = "1.10.0"
rand = "0.8.5"
# wasm-bindgen = "0.2.95"
tokio = { version = "1.41.0", features = ["rt"] }
# tokio = { version = "1.41.0", features = [
#     "rt",
#     "rt-multi-thread",
#     "net",
#     "time",
#     "macros",
# ] }
